# haskell-book

ch02/: learn.hs  test.hs
ch05/: MyTypes.hs
ch06/: Typeclasses.hs
ch07/: Arith2.hs  FunctionalPatterns.hs  NewTypes.hs
ch08/: Recursion.hs
ch09/: MyLists.hs
ch10/: Folds.hs
ch11/: AlgebraicDataTypes.hs  BinaryTree.hs  Ciphers.hs  Expressions.hs
ch12/: SignalingAdversity.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/exe/: Main.hs
ch13/hello/src/: DogsRule.hs  Hello.hs
ch14/: Main.hs  stack.yaml
ch14/ch14-exercises/: README.md  ch14-exercises.cabal
ch14/ch14-exercises/.stack-work/install/x86_64-osx/lts-8.15/8.0.2/flag-cache/: ch14-exercises-0.1.0.0-4QHd31Z18ia8oUBWmNqvKd
ch14/ch14-exercises/.stack-work/install/x86_64-osx/lts-8.15/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSch14-exercises-0.1.0.0-4QHd31Z18ia8oUBWmNqvKd-ghc8.0.2.dylib
ch14/ch14-exercises/.stack-work/install/x86_64-osx/lts-8.15/8.0.2/lib/x86_64-osx-ghc-8.0.2/ch14-exercises-0.1.0.0-4QHd31Z18ia8oUBWmNqvKd/: Arithmetic.dyn_hi  WordNumber.hi
ch14/ch14-exercises/.stack-work/install/x86_64-osx/lts-8.15/8.0.2/pkgdb/: ch14-exercises-0.1.0.0-4QHd31Z18ia8oUBWmNqvKd.conf  package.cache
ch14/ch14-exercises/src/: Arithmetic.hs  WordNumber.hs
ch14/ch14-exercises/test/: ArithmeticTests.hs  Spec.hs  WordNumberTests.hs
ch14/exercises/wordnumber/: wordnumber.cabal
ch14/exercises/wordnumber/test/: WordNumberTest.hs
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/test/: tests.hs
ch15/: MyMonoid.hs
ch15/madness/: madness.cabal
ch15/madness/app/: Main.hs
ch15/madness/src/: MadLibs.hs
ch15/madness/test/: MadLibsTests.hs  Spec.hs
ch15/monoid/: monoid.cabal
ch15/monoid/src/: Try.hs
ch15/monoid/test/: MyMonoid.hs  SemigroupTests.hs  Spec.hs
ch16/functor/: functor.cabal
ch16/functor/src/: IOFunctor.hs  Lib.hs  ReplaceExperiment.hs  Rightmost.hs
ch16/functor/test/: FunctorLaws.hs  Spec.hs
ch17/applicative/: applicative.cabal
ch17/applicative/app/: Main.hs
ch17/applicative/src/: ApplicativeExamples.hs  ApplicativeLaws.hs  Identity.hs  Lib.hs  List.hs  Listos.hs
ch17/applicative/test/: ApplicativeTests.hs  Spec.hs  ZipListTests.hs
ch18/monad/: monad.cabal
ch18/monad/app/: Main.hs
ch18/monad/src/: EitherMonad.hs  MaybeMonad.hs  MonadLaws.hs  Monados.hs  Playground.hs
ch18/monad/test/: ChapterExercises.hs  MonadTests.hs  Spec.hs
ch19/shawty/: shawty.cabal
ch19/shawty/app/: Main.hs
ch20/foldable/: foldable.cabal
ch20/foldable/app/: FoldableExamples.hs  Main.hs
ch20/foldable/src/: ChapterExercises.hs  FoldableInstances.hs
ch21/traversible/: README.md  traversible.cabal
ch21/traversible/src/: ChapterExercises.hs  TraversableInstances.hs
ch21/traversible/test/: Spec.hs  TraversableTests.hs
ch22/reader/: reader.cabal
ch22/reader/app/: Main.hs
ch22/reader/src/: ChapterExercises.hs  Lib.hs  MonkeyAbout.hs  Reader.hs  WarmUp.hs
ch23/state/: state.cabal
ch23/state/src/: ChapterExercises.hs  Die.hs  FizzBuzz.hs  FizzBuzzDL.hs  Gauntlet.hs  Moi.hs  ThrowDown.hs
ch24/parser/: parser.cabal
ch24/parser/src/: AltParsing.hs  LearnParsers.hs
ch24/parser/src/Text/: Fractions.hs
ch25/compose/: compose.cabal
ch25/compose/app/: Main.hs
ch25/compose/src/: Bifunctor.hs  Compose.hs  MonadTransformers.hs
ch26/trafos/: trafos.cabal
ch26/trafos/src/: MaybeTransformer.hs  OuterFirst.hs  ReaderTransformer.hs  StrictStateTransformer.hs
ch26/transformers/: transformers.cabal
ch26/transformers/src/: EitherTransformer.hs  StrictStateTransformer.hs
