name:                madness
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/madness#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , MadLibs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable madness-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , madness
  default-language:    Haskell2010

test-suite madness-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , madness
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       MadLibsTests
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/madness
