name:                trafos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/transformers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , MaybeTransformer
                     , EitherTransformer
                     , ReaderTransformer
                     , StrictStateTransformer
                     , OuterFirst
  build-depends:       base >= 4.7 && < 5
                     , transformers
  default-language:    Haskell2010

executable trafos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trafos
  default-language:    Haskell2010

test-suite trafos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trafos
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/trafos
