name:                wordnumber
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wordnumber#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
                     , .
  main-is:             Main.hs
  exposed-modules:     Main
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
                     , wordnumber
  default-language:    Haskell2010

test-suite wordnumber-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             WordNumberTest.hs
  build-depends:       base >= 4.7 && < 5
                     , wordnumber
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
